# libarib25

./: .gitignore  Makefile.am  configure  configure.ac
src/: arib25api.h  arib_std_b25.c  b_cas_card.c
